# toolkit-cost-optimizer

./: AUDIT_REPORT_COST_LATENCY_OPT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  ENHANCEMENTS.md  README.md  RELEASING.md  SECURITY.md  VERSIONING.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/audits/: COST_OPTIMIZER_AUDIT_REPORT_2026-03-09.md
schemas/: cli-output.schema.json
services/cost-optimization-engine/: CHANGELOG.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
services/cost-optimization-engine/alembic/: env.py
services/cost-optimization-engine/src/toolkit_cost_optimization_engine/: __init__.py  __main__.py  cli.py  main.py
services/cost-optimization-engine/src/toolkit_cost_optimization_engine/api/: accounts.py  cost_data.py  recommendations.py  schemas.py
services/cost-optimization-engine/src/toolkit_cost_optimization_engine/core/: config.py  cost_tracker.py  credential_encryption.py  database.py  logging_config.py  optimization_engine.py  rate_limit.py  request_id.py  telemetry.py
services/cost-optimization-engine/src/toolkit_cost_optimization_engine/models/: models.py
services/cost-optimization-engine/tests/: conftest.py  test_additional_endpoints.py  test_cli_service.py  test_config.py  test_cost_tracker.py  test_credential_encryption.py  test_database_helpers.py  test_database_module.py  test_db_session_lifecycle.py  test_observability.py  test_optimization_engine.py  test_retry_logic.py  test_service_endpoints.py
src/toolkit_cost_latency_opt/: __init__.py  cli.py  io.py  observability.py  policy.py  schema.py  security.py  stats.py
src/toolkit_cost_latency_opt/control_plane/: __init__.py  config.py  tool_specs.py
tests/: test_cli_edge_cases.py  test_comprehensive.py  test_control_plane.py  test_enhancements.py  test_observability.py  test_opt.py  test_security.py
