[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "toolkit-cost-latency-optimizer"
version = "0.1.0"
description = "Cost & Latency Optimizer: summarize inference logs and simulate routing policies."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Toolkit Contributors" }]
keywords = ["cost", "latency", "optimization", "routing", "llm", "slo"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/AKIVA-AI/toolkit-cost-optimizer"
Repository = "https://github.com/AKIVA-AI/toolkit-cost-optimizer"
Issues = "https://github.com/AKIVA-AI/toolkit-cost-optimizer/issues"

[project.scripts]
toolkit-opt = "toolkit_cost_latency_opt.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0",
  "pyright>=1.1.380",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["toolkit_cost_latency_opt"]
omit = ["*/toolkit_cost_latency_opt/__main__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 70

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.lint.isort]
known-first-party = ["toolkit_cost_latency_opt"]

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
toolkit_cost_latency_opt = ["py.typed"]
